--- a/1005/css/1005.css
+++ b/1005/css/1005.css
@@ -3,18 +3,23 @@
 	padding: 0;
 }
 img{
-	width: 25%;
+	width: 20%;
 	height: 100%;
+	margin-left: 5%;
 }
 .head{
-	width: 270px;
-	height: 60px;
-	background-color: blue;
+	width: 400px;
+	height: 80px;
+	background-color: rgb(62, 62, 187);
 	position: relative;
 }
-h4{
-	font-family:"arial, helvetica, sans-serif";
+h3{
 	position: absolute;
-	bottom: 16px;
-	right: 0;
+	bottom: 25px;
+	left: 30%;
+	color: aliceblue;
+}
+div{
+	margin-left: 35%;
+	margin-top: 10%;
 }
